[package]
name = "near-sdk-sim"
version = "3.0.0-pre.3"
authors = ["Near Inc <hello@near.org>"]
edition = "2018"
publish = false


[dependencies]
near-sdk = { path = "../near-sdk", version = "=3.0.0-pre.3" }
near-crypto = { git = "https://github.com/near/nearcore.git", rev = "1e88c6c699e3a2c49c6cbd09d284f69885982e80" }
near-primitives = { git = "https://github.com/near/nearcore.git", rev = "1e88c6c699e3a2c49c6cbd09d284f69885982e80" }
near-vm-logic = { git = "https://github.com/near/nearcore.git", rev = "1e88c6c699e3a2c49c6cbd09d284f69885982e80" }

lazy-static-include = "3"
near-pool = { git = "https://github.com/near/nearcore.git", rev = "1e88c6c699e3a2c49c6cbd09d284f69885982e80" }
near-store = { git = "https://github.com/near/nearcore.git", rev = "1e88c6c699e3a2c49c6cbd09d284f69885982e80" }
node-runtime = { git = "https://github.com/near/nearcore.git", rev = "1e88c6c699e3a2c49c6cbd09d284f69885982e80", features=["costs_counting"] }

# Temporary workaround see https://github.com/bitvecto-rs/bitvec/issues/105
funty = "=1.1.0"

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.9"
fungible-token = { path="../examples/fungible-token/ft" }

[features]
default = []
no_cache = ["near-store/no_cache", "node-runtime/no_cache"]
no_sim = []
no_contract_cache = []
