[package]
name = "near-sdk-sim"
version = "3.1.0"
authors = ["Near Inc <hello@near.org>"]
edition = "2018"
license = "GPL-3.0"
categories = ["wasm"]
repository = "https://github.com/near/near-sdk-rs"
homepage = "https://github.com/near/near-sdk-rs"
description = """
NEAR Simulator & cross-contract testing library
"""


[dependencies]
near-sdk = { path = "../near-sdk", version = "=3.1.0" }
near-crypto = "=0.1.0"
near-primitives = "=0.1.0-pre.1"
near-vm-logic = "=4.0.0-pre.1"

near-pool = "=0.1.0-pre.1"
near-store = "=0.1.0-pre.1"
near-runtime = "=4.0.0-pre.1"
serde = {version = "1", features=["derive"]}
serde_json = "1"

lazy-static-include = "3"
# Temporary workaround see https://github.com/bitvecto-rs/bitvec/issues/105
funty = "=1.1.0"

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.9"
fungible-token = { path="../examples/fungible-token/ft" }

[features]
default = []
no_cache = ["near-store/no_cache", "near-runtime/no_cache"]
no_sim = []
no_contract_cache = []
