[package]
name = "near-sdk"
version.workspace = true
authors = ["Near Inc <max@nearprotocol.com>"]
edition.workspace = true
license.workspace = true
readme = "README.md"
categories.workspace = true
repository.workspace = true
homepage.workspace = true
description = """
Rust library for writing NEAR smart contracts.
"""

[[test]]
name = "compilation_tests"
path = "compilation_tests/all.rs"
required-features = ["abi", "unstable"]

[dependencies]
# Provide near_bidgen macros.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", features = ["base64", "hex", "json"] }
near-sdk-macros = { path = "../near-sdk-macros", version = "~5.17.2" }
near-sys = { path = "../near-sys", version = "0.2.5" }
base64 = "0.22"
borsh = { version = "1.0.0", features = ["derive"] }
bs58 = "0.5"

# Used for caching, might be worth porting only functionality needed.
once_cell = { version = "1.17", default-features = false }

near-account-id = { version = "1.0.0", features = ["serde", "borsh"] }
near-gas = { version = "0.3", features = ["serde", "borsh"] }
near-token = { version = "0.3", features = ["serde", "borsh"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wee_alloc = { version = "0.4.5", default-features = false, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
schemars = { version = "0.8.8", optional = true }
near-abi = { version = "0.4.0", features = [
    "__chunked-entries",
], optional = true }
near-vm-runner = { version = "0.31", optional = true }
near-primitives-core = { version = "0.31", optional = true }
near-primitives = { version = "0.31", optional = true }
near-crypto = { version = "0.31", default-features = false, optional = true }
near-parameters = { version = "0.31", optional = true }

[dev-dependencies]
openssl = { version = "0.10", features = ["vendored"] }
near-sdk = { path = ".", features = ["legacy", "unit-testing"] }
rand = "0.8.4"
trybuild = "1.0"
rustversion = "1.0"
rand_xorshift = "0.3"
quickcheck = "1.0"
arbitrary = { version = "1.2.3", features = ["derive"] }
derive_arbitrary = "1.2.3"
hex = { version = "0.4.3", features = ["serde"] }
getrandom = { version = "0.2", features = ["js"] }
rand_chacha = "0.3.1"
near-rng = "0.1.1"
near-abi = { version = "0.4.0", features = ["__chunked-entries"] }
symbolic-debuginfo = "12"
near-workspaces = { version = "0.21", features = ["unstable"] }
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
strum = "0.25.0"
strum_macros = "0.25.3"
insta = "1.39.0"

[features]
default = ["wee_alloc"]
expensive-debug = []
unstable = []
legacy = []
global-contracts = ["near-sys/global-contracts"]
abi = [
    "borsh/unstable__schema",
    "near-abi",
    "schemars",
    "near-sdk-macros/abi",
    "near-account-id/abi",
    "near-gas/abi",
    "near-token/abi",
    "serde_with/schemars_0_8",
]
unit-testing = [
    "near-vm-runner",
    "near-primitives-core",
    "near-primitives",
    "near-crypto",
    "near-parameters",
]
non-contract-usage = []

__abi-embed = ["near-sdk-macros/__abi-embed"]
__abi-generate = ["abi", "near-sdk-macros/__abi-generate"]

__macro-docs = []

[package.metadata.docs.rs]
features = [
    "global-contracts",
    "unstable",
    "legacy",
    "unit-testing",
    "__macro-docs",
    "__abi-generate",
]
