[package]
name = "near-sdk"
version.workspace = true
authors = ["Near Inc <max@nearprotocol.com>"]
edition.workspace = true
license.workspace = true
readme = "README.md"
categories.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = """
Rust library for writing NEAR smart contracts.
"""

[[test]]
name = "compilation_tests"
path = "compilation_tests/all.rs"
required-features = ["abi", "unstable"]

[dependencies]
# Provide near_bidgen macros.
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_with = { version = "3", features = ["base64", "hex", "json"] }
near-sdk-macros = { path = "../near-sdk-macros", version = "~5.29.0-rc.2" }
near-sys = { path = "../near-sys", version = "0.2.12" }
near-sdk-env = { path = "../near-sdk-env/", version = "~0.1.4" }
near-sdk-core = { path = "../near-sdk-core/", version = "~4.2.1", features = [
    "serde",
    "borsh",
] }
near-global-contracts = { path = "../near-global-contracts/", version = "~0.2.4", features = [
    "serde",
    "borsh",
] }
base64 = "0.22"
borsh = { version = "1.0.0", features = ["derive"] }
bs58 = "0.5"
hex = { version = "0.4", optional = true }

# Used for caching, might be worth porting only functionality needed.
once_cell = { version = "1.17", default-features = false }

near-account-id = { version = "2.3.0", features = ["serde", "borsh"] }
near-gas = { version = "0.3", features = ["serde", "borsh"] }
near-token = { version = "0.3", features = ["serde", "borsh"] }

arbitrary = { version = "1.4", features = ["derive"], optional = true }

near-digest = { path = "../near-digest/", version = "0.1.0", features = [
    "sha2",
    "sha3",
    "ripemd",
], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wee_alloc = { version = "0.4.5", default-features = false, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
schemars = { version = "0.8.22", optional = true }
ed25519-dalek = { version = "2.2.0", optional = true }
p256 = { version = "0.13.2", default-features = false, features = [
    "ecdsa",
    "std",
], optional = true }
near-abi = { version = "0.4.0", features = [
    "__chunked-entries",
], optional = true }
# nearcore 2.13 adds the promise_yield_create_with_id / promise_yield_resume_with_yield_id host
# functions (protocol v85), so the unit-testing mock can delegate to VMLogic for them. Pinned to the
# published 2.13 release candidate `0.37.0-rc.2`. Bump to `0.37.0` (drop the `=`) once 2.13 ships stable.
near-vm-runner = { version = "=0.37.0-rc.2", optional = true }
near-primitives-core = { version = "=0.37.0-rc.2", optional = true }
near-primitives = { version = "=0.37.0-rc.2", optional = true }
near-crypto = { version = "=0.37.0-rc.2", default-features = false, optional = true }
unicode-segmentation = { version = "1", optional = true }
near-parameters = { version = "=0.37.0-rc.2", optional = true }

[dev-dependencies]
openssl = { version = "0.10", features = ["vendored"] }
near-sdk = { path = ".", features = ["legacy", "unit-testing"] }
rand = { version = "0.8.4", features = ["small_rng"] }
trybuild = "1.0"
rustversion = "1.0"
rand_xorshift = "0.3"
quickcheck = "1.0"
arbitrary = { version = "1.2.3", features = ["derive"] }
derive_arbitrary = "1.2.3"
hex = { version = "0.4.3", features = ["serde"] }
getrandom = { version = "0.2", features = ["js"] }
rand_chacha = "0.3.1"
near-rng = "0.1.1"
near-abi = { version = "0.4.0", features = ["__chunked-entries"] }
symbolic-debuginfo = "12"
near-workspaces = { version = "0.22.4", features = ["unstable"] }
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
strum = "0.25.0"
strum_macros = "0.25.3"
insta = "1.39.0"

[lints]
workspace = true

[features]
default = ["wee_alloc"]

arbitrary = [
    "dep:arbitrary",
    "near-account-id/arbitrary",
    "near-sdk-core/arbitrary",
    "near-global-contracts/arbitrary",
]
expensive-debug = []
deterministic-account-ids = ["dep:hex", "near-sys/deterministic-account-ids"]
digest = ["dep:near-digest"]
unstable = []
legacy = []
global-contracts = []
abi = [
    "borsh/unstable__schema",
    "near-abi",
    "schemars",
    "near-sdk-macros/abi",
    "near-account-id/abi",
    "near-gas/abi",
    "near-token/abi",
    "near-sdk-core/abi",
    "near-global-contracts/abi",
    "serde_with/schemars_0_8",
]
unit-testing = [
    "near-vm-runner",
    "near-primitives-core",
    "near-primitives",
    "near-crypto",
    "unicode-segmentation",
    "near-parameters",
    "near-sdk-env/__near-sdk-unit-testing",
    "near-sdk-core/__near-sdk-unit-testing",
    "near-global-contracts/__near-sdk-unit-testing",
]
non-contract-usage = [
    "ed25519-dalek",
    "p256",
    "near-crypto",
    "unicode-segmentation",
    "near-primitives-core",
    "near-sdk-core/near-crypto-interop",
    "near-sdk-core/near-primitives-interop",
    "near-global-contracts/near-primitives-interop",
]

__abi-embed = ["near-sdk-macros/__abi-embed"]
__abi-generate = ["abi", "near-sdk-macros/__abi-generate"]

__macro-docs = []

[package.metadata.near]
# Minimum nearcore protocol version this release of near-sdk targets.
# Read by cargo-near to determine the maximum rustc version allowed when
# building contracts that depend on this near-sdk. PV 84 (nearcore 2.12)
# unlocks bulk-memory + reftypes opcodes, enabling rustc 1.93+.
min_protocol_version = 84

[package.metadata.docs.rs]
features = [
    "unstable",
    "legacy",
    "unit-testing",
    "__macro-docs",
    "__abi-generate",
]
