[package]
name = "near-state-init"
version = "0.1.0"
edition.workspace = true
license.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_with = { version = "3", features = ["base64", "hex", "json"] }
base64 = "0.22"
borsh = { version = "1.0.0", features = ["derive"] }
bs58 = "0.5"
hex = "0.4"
schemars = { version = "0.8.22", optional = true }

arbitrary = { version = "1.4", optional = true }

near-account-id = "2.6.0"
near-sdk-core = { path = "../near-sdk-core/", version = "~0.1.0", default-features = false }
near-env = { path = "../near-env/", version = "~0.1.0" }
near-sdk-macros = { path = "../near-sdk-macros/", version = "~5.26.1" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
near-primitives-core = { version = "0.35", optional = true }

[features]
default = []

abi = [
    "borsh/unstable__schema",
    "schemars",
    "near-sdk-macros/abi",
    "near-account-id/abi",
    "near-sdk-core/abi",
    "serde_with/schemars_0_8",
]

arbitrary = [
    "dep:arbitrary",
    "arbitrary/derive",
    "near-account-id/arbitrary",
    "near-sdk-core/arbitrary",
]

near-primitives-interop = [
    "dep:near-primitives-core",
    "near-sdk-core/near-primitives-interop",
]

__near-sdk-unit-testing = [
    "near-primitives-interop",
    "near-sdk-core/__near-sdk-unit-testing",
    "near-env/__near-sdk-unit-testing",
]
