[package]
name = "near-sys"
version = "0.2.7"
authors = ["Near Inc <hello@near.org>"]
edition.workspace = true
license.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = """
Syscall definitions for builtin functions of the NEAR runtime.
"""

[dependencies]

[features]
global-contracts = []
deterministic-account-ids = []
