[package]
name = "abi"
version = "0.1.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# "abi-doc" is an optional feature that includes contract functions' rustdocs into the ABI file
near-sdk = { path = "../../near-sdk", features = ["abi", "abi-doc"] }
serde = { version = "1", features = ["derive"] }
schemars = "0.8"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"

[workspace]
members = []
