[package]
name = "adder"
version = "0.1.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2021"
repository = "https://github.com/near/near-sdk-rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { path = "../../near-sdk" }

[dev-dependencies]
near-workspaces = { version = "0.18", features = ["unstable"] }
tokio = { version = "1.14", features = ["full"] }
anyhow = "1.0"
near-abi = "0.4.0"
zstd = "0.13"
near-sdk = { path = "../../near-sdk", features = ["unit-testing"] }

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"

[package.metadata.near.reproducible_build]
# docker image, descriptor of build environment
image = "nearprotocol/contract-builder:latest-amd64"
# tag after colon above serves only descriptive purpose; image is identified by digest
image_digest = "sha256:53b34ea28b8995c6e8908e76db8ea0b117ac73bc91c83c8aae930e635e9ef885"
container_build_command = [
    "cargo",
    "near",
    "build",
    "reproducible-wasm",
    "--no-lockedd",
]
