[package]
name = "callback-results"
version = "0.1.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# near-sdk = { path = "../../near-sdk" }
near-sdk = { version = "4.1.1", features = ["unstable"] }

[dev-dependencies]
near-workspaces = { version = "0.8.0" }
serde_json = "1.0"
tokio = { version = "1.14", features = ["full"] }
anyhow = "1.0"
near-gas = { version = "*" }

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
