[package]
name = "collection-comparison"
version = "0.0.1"
authors = ["Mike Purvis <mike@near.org>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { path = "../../near-sdk" }

[dev-dependencies]
near-sdk-sim = { path = "../../near-sdk-sim" }

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
