[package]
name = "cross-contract-wrapper"
version = "0.1.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2024"
rust-version = "1.86"
repository = "https://github.com/near/near-sdk-rs"

[dev-dependencies]
# Pin: unicode-segmentation 1.13.1 requires Rust 1.87 but does not declare rust-version
unicode-segmentation = ">=1, <1.13.1"
anyhow = "1.0"
near-sdk = { path = "../../near-sdk", features = ["default", "unit-testing"] }
test-case = "2.0"
tokio = { version = "1.14", features = ["full"] }
near-workspaces = { version = "0.22", features = ["unstable"] }

cross-contract-high-level = { path = "./high-level" }
cross-contract-low-level = { path = "./low-level" }

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"

[workspace]
resolver = "3"
package.edition = "2024"
package.rust-version = "1.86"
members = ["high-level", "low-level"]
