[package]
name = "factory-contract-global"
version = "0.1.0"
edition = "2024"
rust-version = "1.86"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { path = "../../near-sdk", features = ["legacy", "unstable", "global-contracts"] }

[dev-dependencies]
near-sdk = { path = "../../near-sdk", features = ["unit-testing", "global-contracts"] }
near-workspaces = { version = "0.22", features = ["unstable"] }
tokio = { version = "1.12.0", features = ["full"] }
anyhow = "1.0"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
resolver = "3"
