[package]
name = "factory-contract-global"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
repository = "https://github.com/near/near-sdk-rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { path = "../../near-sdk", features = ["legacy", "unstable"] }

[dev-dependencies]
near-sdk = { path = "../../near-sdk", features = ["unit-testing"] }
near-workspaces = { version = "0.22", features = ["unstable"] }
tokio = { version = "1.12.0", features = ["full"] }
anyhow = "1.0"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[package.metadata.near.reproducible_build]
# docker image, descriptor of build environment
image = "sourcescan/cargo-near:0.20.3-rust-1.93.0"
# tag after colon above serves only descriptive purpose; image is identified by digest
image_digest = "sha256:8e61653261766ff251a6c6c2004f2745446fc1ba74d807b3daf6e2cc5cf99ea9"
# passed_env: list of environment variable names whose values will be passed to the build
passed_env = []
# build command inside of docker container
container_build_command = [
    "cargo",
    "near",
    "build",
    "non-reproducible-wasm",
    "--locked",
]

[workspace]
resolver = "3"
